# stingray

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.rst  LICENSE.rst  MANIFEST.in  README.rst  appveyor.yml  codecov.yml  pyproject.toml  readme.rst  readthedocs.yml  requirements.txt  setup.cfg  setup.py  testing_crossspectrum.ipynb  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Issue.yml  bug_issue.yml  doc_Issue.yml
.github/workflows/: check_docs.yml  ci_test.yml  docs.yml  publish_docs.yml
doc/: conf.py
docs/: .gitignore  acknowledgements.rst  api.rst  basics.rst  citing.rst  conf.py  contributing.rst  core.rst  dataexplo.rst  deadtime.rst  help.rst  history.rst  index.rst  install.rst  intro.rst  intro.txt  largedata.rst  modeling.rst  pulsar.rst  pulse.rst  quicklook.rst  readthedocs-environment.yml  requirements.txt  scope.rst  simulator.rst  spectime.rst  timeseries.rst
docs/_static/css/: custom.css
docs/changes/: 697.trivial.rst  707.trivial.rst  712.bugfix.rst  715.trivial.rst  716.feature.rst  718.trivial.rst  721.doc.rst  723.feature.rst  725.bugfix.rst  727.bugfix.rst  729.breaking.rst  729.trivial.rst  730.feature.rst  731.trivial.rst  736.bugfix.rst  737.feature.rst  738.bugfix.rst  739.feature.rst  742.feature.rst  745.feature.rst  747.bugfix.rst  748.docs.rst  749.bugfix.rst  753.bugfix.rst  754.feature.rst  755.breaking.rst  755.removal.rst  756.bugfix.rst  757.trivial.rst  760.bugfix.rst  762.bugfix.rst  763.bugfix.rst  764.feature.rst  769.trivial.rst  774.bugfix.rst  776.bugfix.rst  779.bugfix.rst  780.feature.rst  781.feature.rst  782.feature.rst  (+47 more)
joss/: joss.bib  paper.md  paper2.md
stingray/: __init__.py  base.py  bexvar.py  bispectrum.py  classical_significances.py  conftest.py  covariancespectrum.py  crosscorrelation.py  crossspectrum.py  data.py  dummy.ascii  dummy.fits  dummy.pickle  events.py  exceptions.py  filters.py  fourier.py  gti.py  io.py  largememory.py  lightcurve.py  loggingconfig.py  lombscargle.py  multitaper.py  parameterestimation.py  parametricmodels.py  periodogram.py  posterior.py  power_colors.py  powerspectrum.py  sampledata.py  spectroscopy.py  stats.py  utils.py  varenergyspectrum.py
stingray/data/: sample
stingray/datasets/: lc_sample.csv  xselect.mdb
stingray/deadtime/: __init__.py  fad.py  filters.py  model.py
stingray/deadtime/tests/: test_fad.py  test_filters.py  test_models.py
stingray/docs/: basics.rst
stingray/mission_support/: __init__.py  missions.py  rxte.py
stingray/mission_support/tests/: test_mission_support.py
stingray/modeling/: __init__.py  gpmodeling.py  parameterestimation.py  parametricmodels.py  posterior.py  scripts.py
stingray/modeling/tests/: test_gpmodeling.py  test_parameterestimation.py  test_parametricmodels.py  test_posterior.py  test_scripts.py
stingray/pulse/: __init__.py  accelsearch.py  fftfit.py  modeling.py  pulsar.py  search.py
stingray/pulse/overlapandsave/: README.md  ols.py  test_ols.py
stingray/pulse/tests/: test_accelsearch.py  test_modeling.py  test_pulse.py  test_search.py
stingray/pulse/tests/data/: example_pint.par  example_pint.tim
stingray/simulator/: __init__.py  base.py  events.py  fake.py  models.py  simulator.py  transfer.py  utils.py
stingray/simulator/tests/: __init__.py  test_base.py  test_events.py  test_fake.py  test_simulator.py  test_transfer.py  transfer
stingray/tests/: coveragerc  dummy.ascii.ecsv  dummy.fits  dummy.pickle  test_base.py  test_bexvar.py  test_bispectrum.py  test_covariancespectrum.py  test_crosscorrelation.py  test_crossspectrum.py  test_events.py  test_filters.py  test_fourier.py  test_gti.py  test_io.py  test_largememory.py  test_lightcurve.py  test_lombscargle.py  test_multitaper.py  test_parametricmodels.py  test_posterior.py  test_power_colors.py  test_powerspectrum.py  test_sampledata.py  test_spectroscopy.py  test_stats.py  test_utils.py  test_varenergyspectrum.py
stingray/tests/data/: chandra_noener_test.fits  chandra_test.fits  laxpc_file_read.fits  lcurveA.fits  lcurve_new.fits  monol_testA.evt  nomission.evt  sample_variable_lc.npy  sample_variable_series.fits
tests/: lightcurve_tests.py  periodogram_tests.py  test_classical_significances.py  test_io.py  test_lightcurve.py  test_powerspectrum.py  test_utils.py
validation/: Validate TOA calculation.ipynb
