[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
;filterwarnings =
;    ignore:FutureWarning
;    ignore:DeprecationWarning
addopts = --disable-warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = stingray
description = Time Series Methods For Astronomical X-ray Data
long_description = A general-purpose timing package for X-ray time series.
author = Stingray Developers
author_email = spectraltiming-stingray@googlegroups.com
license = MIT
url = https://github.com/StingraySoftware/stingray
edit_on_github = False
github_project = StingraySoftware/stingray
install_requires = astropy, six, numpy>=1.11.0, scipy>=0.18.0, matplotlib>=1.3
